[squid:S2111] "BigDecimal(double)" should not be used [DM_NUMBER_CTOR] Method invokes inefficient Number constructor; use static valueOf instead